--- a/email-templates/activation-mail.ejs
+++ b/email-templates/activation-mail.ejs
@@ -81,12 +81,12 @@
 <body>
   <div class="email-wrapper">
     <div class="email-header">
-      <h1>Welcome to SinhNgyen</h1>
+      <h1>Welcome to SinhNguyen</h1>
     </div>
     <div class="email-body">
       <p>Hello <%= name %>,</p>
       <p>
-        Thank you for registering with SinhNgyen. To activate your account,
+        Thank you for registering with SinhNguyen. To activate your account,
         please use the following activation code:
       </p>
       <h2>
@@ -97,14 +97,14 @@
         minutes.
       </p>
       <p>
-        If you did not register for a SinhNgyen account, please ignore this
+        If you did not register for a SinhNguyen account, please ignore this
         email.
       </p>
     </div>
     <div class="email-footer">
       <p>
         If you have any questions, please don't hesitate to contact us at
-        <a href="mailto:support@SinhNgyen.com">support@SinhNgyen.com</a>
+        <a href="mailto:support@sinhnguyen.com">support@SinhNguyen.com</a>
       </p>
     </div>
   </div>
